fix problem with infoBox visibility and change infoBox colors

--- a/client/src/components/Map/map.css
+++ b/client/src/components/Map/map.css
@@ -18,12 +18,12 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  background: #1a75ff;
+  background: #0052cc;
   color: #fff;
   border: 0;
   padding: 5px;
   border-radius: 2px;
-  border: 2px solid #0052cc;
+  border: 2px solid #003380;
   font-weight: bold;
 }
 
@@ -40,7 +40,7 @@
   opacity: 0.85;
   height: 200px;
   width: 200px;
-  border: 5px solid #0052cc;
+  border: 5px solid #003380;
   border-radius: 5px;
 
 }
@@ -62,7 +62,7 @@
 }
 .infoBoxContainer:before{
 	border-color: rgba(255, 31, 150, 0);
-	border-top-color: #0052cc;
+	border-top-color: #003380;
 	border-width: 25px;
 	margin-left: -25px;
 }
